tests/errors/test_44.x
// Expression may not be emitted if type unspecified

let y;

fn main() -> int {

    let x;

    let y = [];

}